QA-4983: updated versions in pom: spring, closure.compiler, jacoco-maven-plugin, groovy; remove commons-logging